# docx-template-system

./: .dockerignore  .env.offline.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  after-save.yml  apps.yml  auth.json  author-table.yml  check_draft.mjs  check_draft.ts  current.yml  debug_export.ts  debug_filter.py  debug_tpl.py  debug_tpl2.py  debug_tpl3.py  detail-test.yml  detail2.yml  docker-compose.offline.yml  docker-compose.yml  drawer-nav.yml  eslint.config.mjs  fields-debug.yml  grid-test.yml  grid-view-icons.yml  grid2.yml  kanban-after-drop.yml  kanban-dragging.yml  kanban-edit-test.yml  kanban-editing.yml  login.yml  lookup-field-list.yml  lookup-grid-view.yml  next.config.ts  package-lock.json  package.json  popover-test.yml  (+7 more)
.playwright-cli/: page-2026-03-26T11-19-35-378Z.yml  page-2026-03-26T11-21-05-541Z.yml  page-2026-03-26T11-21-22-538Z.yml  page-2026-03-26T11-21-36-113Z.yml  page-2026-03-26T11-21-53-697Z.yml  page-2026-03-26T11-26-12-920Z.yml  page-2026-03-26T11-26-38-435Z.yml  page-2026-03-26T11-26-45-385Z.yml  page-2026-03-26T11-26-57-673Z.yml  page-2026-03-26T11-27-42-492Z.yml  page-2026-03-26T11-28-29-028Z.yml  page-2026-03-26T11-30-54-642Z.yml  page-2026-03-26T11-31-01-991Z.yml  page-2026-03-26T11-31-23-597Z.yml  page-2026-03-26T11-31-42-456Z.yml  page-2026-03-26T11-32-07-249Z.yml  page-2026-03-26T11-32-32-264Z.yml  page-2026-03-26T11-34-39-107Z.yml  page-2026-03-26T11-34-51-648Z.yml  page-2026-03-26T11-35-19-935Z.yml  page-2026-03-26T11-35-32-722Z.yml  (+84 more)
apps/desktop/src-tauri/: Cargo.toml  sidecar  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
(+946 files in other folders)
