[package]
name = "budget-report-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "rt-multi-thread"] }
port_scanner = "0.1.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
